@@ -137,6 +137,7 @@ svn_cl__cmd_proc_t
   svn_cl__proplist,
   svn_cl__propset,
   svn_cl__revert,
+  svn_cl__resolve,
   svn_cl__status,
   svn_cl__switch,
   svn_cl__update;
